--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@emotion/react": "11.14.0",
     "@emotion/styled": "11.14.0",
     "@mui/material": "6.4.2",
+    "@tailwindcss/vite": "4.0.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "tailwindcss": "4.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
